:lipstick: :bug: fix z-index on bulk actions dropdowns

--- a/decidim-admin/app/assets/stylesheets/decidim/admin/modules/_dropdown.scss
+++ b/decidim-admin/app/assets/stylesheets/decidim/admin/modules/_dropdown.scss
@@ -3,6 +3,7 @@
   padding: 0;
   background-color: $white;
   border: $card-border;
+  z-index: 110;
 
   ul{
     margin: 0;
